--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -38,6 +38,11 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  com.apple.eio; \
  com.apple.cocoa.application; \
  com.apple.cocoa.foundation; \
+ quicktime; \
+ quicktime.std.sg; \
+ quicktime.qd; \
+ quicktime.util; \
+ quicktime.std.image; \
  org.xml.sax.helpers; \
  javax.crypto; \
  javax.crypto.spec; \
