fixing failing media bundle when running tests.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4667 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -29,6 +29,11 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  net.java.stun4j.client;\
  javax.sound;\
  javax.sound.sampled; \
+ quicktime; \
+ quicktime.std.sg; \
+ quicktime.qd; \
+ quicktime.util; \
+ quicktime.std.image; \
  javax.naming; \
  javax.naming.directory; \
  javax.net; \
