General group chat UI enhancements.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4670 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -134,10 +134,11 @@ contactListGroupRowColor=C2CEE0
 contactListGroupGradientColor=C2CEE0
 
 # Main window background color.
+
 mainWindowBackground=FAFAFA
 
-# Background color of the toolbar button when selected.
-toolbarBackground=414141
+# Tooltip background color.
+tooltipBackground=E8E9EF
 
 # Rollover color for the toolbar button.
 toolbarRolloverBackground=414141
@@ -146,6 +147,7 @@ toolbarRolloverBackground=414141
 contactListContactForeground=000000
 
 # Contactlist group text foreground color.
+
 contactListGroupForeground=000000
 
 # Tooltip background.
