--- a/build.xml
+++ b/build.xml
@@ -626,7 +626,6 @@
             <!-- add some eventual profiler args -->
             <jvmarg line="${profiler.args} ${jvmarg.line}"/>
         </java>
-
     </target>
 
     <!--RUN-SIP-COMMUNICATOR-WITH-INTEGRATED-PROFILER -->
@@ -1255,6 +1254,7 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/impl/gui"/>
             <zipfileset src="lib/installer-exclude/jna.jar" prefix=""/>
             <zipfileset src="lib/installer-exclude/transparency.jar" prefix=""/>
+            <zipfileset src="lib/installer-exclude/swing-worker-1.2.jar" prefix=""/>
         </jar>
     </target>
 
