--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -38,6 +38,7 @@
     <classpathentry kind="lib" path="lib/installer-exclude/fmj.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/jna.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/lti-civil-no_s_w_t.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/swing-worker-1.2.jar"/>
     <classpathentry kind="lib" path="lib/os-specific/linux/installer-exclude/jmf.jar"/>
     <classpathentry kind="lib" path="lib/os-specific/linux/jdic_stub.jar"/>
     <classpathentry kind="lib" path="lib/os-specific/mac/installer-exclude/jmf.jar"/>
