Add jna.library.path to run target.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4691 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -601,6 +601,8 @@
             <!-- Setting properties necessary for dependencies on native libs.-->
             <sysproperty key="java.library.path"
                 path="${ld.library.path}:${path}:${dyld.library.path}"/>
+        	<sysproperty key="jna.library.path"
+        	                path="${ld.library.path}:${path}:${dyld.library.path}"/>
 
             <!-- pass l10n properties from ant call for
                  easy translation debugging -->
