Update ffmpeg (problem with linking libs), add jna.library.path to as executables.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4692 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -635,6 +635,8 @@
         <javaproperty name="apple.awt.showGrowBox" value="true"/>
         <javaproperty name="java.library.path"
                       value="$JAVAROOT/lib/native/mac:${system.DYLD_LIBRARY_PATH}"/>
+        <javaproperty name="jna.library.path"
+	                      value="$JAVAROOT/lib/native/mac:${system.DYLD_LIBRARY_PATH}"/>
 
         <javaproperty name="net.java.sip.communicator.SC_HOME_DIR_NAME"
                       value="${application.name}"/>
