--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -1,14 +1,13 @@
 # This file contains the recommended set of properties to initialize
-# the sip-communicator environment when running any of the automated
-# testing targets.
+# the sip-communicator unit testing environment.
 
-# you should copy this template to a new file called ./lib/testing.properties
-# and then you can safely make changes to this personal copy. The build.xml
-# testing targets expect you to provide this personal file.
-
-# list all the tests that should be run by the test target of the project.
-# n.b. if you do not want to run them all for some reason, be careful
-#      how you mark your continuations and comments!
+# define all the tests to be run by the test target of the project.
+#
+# n.b. if you do not want to run some of them and edit this list, be careful
+#      NOT to commit your changed file to the project repository!
+#
+# n.b. a multi-line continuation is marked with {white-space + back-slash + newline}.
+#      Comments cannot be embedded in a multi-line value list!
 #
 net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  MetaContactListServiceLick \
@@ -29,7 +28,6 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
 # successfully because it sets up ZERO tests - the
 # addSuite calls are commented-out in start().
 
-
 # The following tests should currently not be executed:-
 #
 # NetworkAddressManagerServiceLick currently sets up ZERO tests
@@ -42,6 +40,22 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
 # GenericProtocolProviderServiceLick because it does not add any tests.
 #
 # IcqProtocolProviderSlick because 2 of its 25 tests fail.
+
+
+# define all the test classes that can be run standalone, or by the
+# SlicklessTests bundle under felix.
+#
+# n.b. you must code fully qualified names for the classes (unlike TEST_LIST above).
+#
+# n.b. if you do not want to run some of them and edit this list, be careful
+#      NOT to commit your changed file to the project repository!
+#
+# n.b. a multi-line continuation is marked with {white-space + back-slash + newline}.
+#      Comments cannot be embedded in a multi-line value list!
+#
+net.java.sip.communicator.slick.runner.SLICKLESS_TEST_LIST= \
+ net.java.sip.communicator.slick.slickless.util.TestBase64 \
+ net.java.sip.communicator.slick.slickless.util.xml.TestXMLUtils
 
 
 # Set a different name for the meta contact list file that will be used
