Updated icons and color properties.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4700 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -57,7 +57,7 @@ tabbedPaneBorderHighlight=96A9C6
 primaryControlShadow=96A9C6
 
 # Background color for all windows.
-desktopBackgroundColor=FAFAFA
+desktopBackgroundColor=0575ce
 
 # Text color for all texts.
 textColor=333333
@@ -83,7 +83,7 @@ historyIncomingCallBackground=F9FFC5
 historyOutgoingCallBackground=F3F4F7
 
 # Selection color for all lists (contact list, call list, chat rooms list, etc.)
-listSelectionColor=D1D4E1
+listSelectionColor=add2ef
 
 # Selection border color of all lists (contact list, call list, chat rooms list, etc.)
 listSelectionBorderColor=8EA0BC
@@ -125,17 +125,17 @@ toolBarForeground=FFFFFF
 accountRegistrationBackground=C2CEE0
 
 # Contact list contact row color.
-contactListRowColor=e8e9ef
+contactListRowColor=add2ef
 
 # Contact list group row background color.
-contactListGroupRowColor=C2CEE0
+contactListGroupRowColor=d3d3d3
 
 # Contact list gradient group color.
-contactListGroupGradientColor=C2CEE0
+contactListGroupGradientColor=FFFFFF
 
 # Main window background color.
 
-mainWindowBackground=FAFAFA
+mainWindowBackground=FFFFFF
 
 # Tooltip background color.
 tooltipBackground=E8E9EF
@@ -151,4 +151,14 @@ contactListContactForeground=000000
 contactListGroupForeground=000000
 
 # Tooltip background.
+
 tooltipBackground=e8e9ef
+
+mainBackgroundStartColor=4a9bdb
+#mainBackgroundStartColor=0575ce
+
+mainBackgroundEndColor=e1f0fd
+
+actionPanelBgStartColor=474747
+
+actionPanelBgEndColor=999999
