--- a/build.xml
+++ b/build.xml
@@ -1311,6 +1311,7 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="lib/installer-exclude/jna.jar" prefix=""/>
             <zipfileset src="lib/installer-exclude/transparency.jar" prefix=""/>
             <zipfileset src="lib/installer-exclude/swing-worker-1.2.jar" prefix=""/>
+            <zipfileset src="lib/installer-exclude/laf-widget.jar" prefix=""/>
         </jar>
     </target>
 
