--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -8,6 +8,7 @@ net.java.sip.communicator.impl.gui.messageHistorySize=10
 net.java.sip.communicator.impl.gui.isTransparentWindowEnabled=false
 net.java.sip.communicator.impl.gui.windowTransparency=180
 net.java.sip.communicator.impl.gui.isWindowDecorated=true
+net.java.sip.communicator.impl.gui.isWindowImageBackgroundEnabled=false
 
 applicationName=SIP Communicator
 applicationWebSite=http://sip-communicator.org
@@ -18,7 +19,7 @@ isLookAndFeelDecorated=false
 isToolBarExteneded=false
 defaultGroupName=
 preferredAccountWizard=
-tabOverlap=10
+tabOverlap=0
 mainWindowWidth=250
 mainWindowHeight=600
 minMainWindowWidth=100
@@ -33,7 +34,7 @@ dialPadWidth=150
 dialPadHeight=150
 dialPadHorizontalGap=5
 dialPadVerticalGap=5
-mainWindowBorderSize=0
+mainWindowBorderSize=10
 contactListRowTransparency=200
 
 isTextureBackground=false
