- Fix background color problems on Linux (Reported by Vincent Lucas). - Add property to make the background decorations removable.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4707 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -57,7 +57,7 @@ tabbedPaneBorderHighlight=96A9C6
 primaryControlShadow=96A9C6
 
 # Background color for all windows.
-desktopBackgroundColor=0575ce
+desktopBackgroundColor=FAFAFA
 
 # Text color for all texts.
 textColor=333333
@@ -154,9 +154,13 @@ contactListGroupForeground=000000
 
 tooltipBackground=e8e9ef
 
-mainBackgroundStartColor=4a9bdb
-#mainBackgroundStartColor=0575ce
+# The background color of all windows and dialogs.
+mainBackground=0575ce
 
+# The start color of the gradient painted to all windows.
+mainBackgroundStartColor=4a9bdb
+
+# The end color of the gradient painted to all windows.
 mainBackgroundEndColor=e1f0fd
 
 actionPanelBgStartColor=474747
