--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -9,6 +9,7 @@ net.java.sip.communicator.impl.gui.isTransparentWindowEnabled=false
 net.java.sip.communicator.impl.gui.windowTransparency=180
 net.java.sip.communicator.impl.gui.isWindowDecorated=true
 net.java.sip.communicator.impl.gui.isWindowImageBackgroundEnabled=false
+net.java.sip.communicator.impl.gui.isWindowColorBackgroundEnabled=true
 
 applicationName=SIP Communicator
 applicationWebSite=http://sip-communicator.org
