--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -63,6 +63,8 @@ MUTE_BUTTON=resources/images/impl/gui/buttons/muteButton.png
 TRANSFER_CALL_BUTTON=resources/images/impl/gui/buttons/transferCallButton.png
 SECURE_BUTTON_ON=resources/images/impl/gui/buttons/secureOn.png
 SECURE_BUTTON_OFF=resources/images/impl/gui/buttons/secureOff.png
+ENTER_FULL_SCREEN_BUTTON=resources/images/impl/gui/buttons/enterFullScreen.png
+EXIT_FULL_SCREEN_BUTTON=resources/images/impl/gui/buttons/exitFullScreen.png
 INVITE_DIALOG_ICON=resources/images/impl/gui/common/inviteDialogIcon.png
 SEND_SMS_ICON=resources/images/impl/gui/common/gsm.png
 DIAL_BUTTON_BG=resources/images/impl/gui/buttons/dialButtonBg.png
