Decrease h264 iframe interval, decrease packet sizes, fix windows exe as it wasn't setting java.library.path.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4721 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -30,6 +30,8 @@
 -->
 <project name="sip-communicator-installer" basedir="." default="ant-usage">
 
+    <import file="../../build.xml"/>
+
     <property file="${inst.resrc}/ant-build-config.properties"/>
     <!-- Load installer properties -->
     <!-- USERS NEED TO UPDATE THIS FILE -->
