Major update for the dict protocol - Using an external library to manage the connection with the server - Enhanced account registration wizard
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4730 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1740,6 +1740,7 @@ javax.swing.event, javax.swing.border"/>
              manifest="${src}/net/java/sip/communicator/impl/protocol/dict/dict.provider.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/protocol/dict"
                     prefix="net/java/sip/communicator/impl/protocol/dict"/>
+            <zipfileset src="${lib.noinst}/dict4j.jar" prefix=""/>
         </jar>
     </target>
 
