--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -353,6 +353,7 @@ inviteIcon=resources/images/plugin/whiteboard/inviteDialogIcon.png
 
 # dict status enum
 dictProtocolIcon=resources/images/protocol/dict/dict-16x16.png
+dictOfflineIcon=resources/images/protocol/dict/dict-16x16-offline.png
 dict64x64Icon=resources/images/protocol/dict/dict-64x64.png
 
 # gibberish status enum
