The same ol', same ol'... Eclipse .classpath...
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4731 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -12,6 +12,7 @@
     <classpathentry kind="lib" path="lib/installer-exclude/aclibico-2.1.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/commons-logging.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/concurrent.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/dict4j.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/dnsjava-2.0.3.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/ffmpeg-java-gpl.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/fmj.jar"/>
