--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -83,7 +83,8 @@ felix.auto.start.45= \
  reference:file:sc-bundles/argdelegation-service.jar \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
- reference:file:sc-bundles/branding.jar
+ reference:file:sc-bundles/branding.jar \
+ reference:file:sc-bundles/swing-common.jar
 
 felix.auto.start.49= \
  reference:file:sc-bundles/zrtp4j.jar \
