--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -80,6 +80,7 @@ felix.auto.start.4= \
  reference:file:sc-bundles/jfontchooserlib.jar \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
+ reference:file:sc-bundles/swing-common.jar \
  reference:file:sc-bundles/netaddr.jar
 
 felix.auto.start.5= \
