--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -119,6 +119,9 @@ service.gui.buttons.MUTE_BUTTON=resources/images/impl/gui/buttons/muteButton.png
 service.gui.buttons.TRANSFER_CALL_BUTTON=resources/images/impl/gui/buttons/transferCallButton.png
 service.gui.buttons.SECURE_BUTTON_ON=resources/images/impl/gui/buttons/secureOn.png
 service.gui.buttons.SECURE_BUTTON_OFF=resources/images/impl/gui/buttons/secureOff.png
+service.gui.buttons.ENCR_VERIFIED=resources/images/impl/gui/buttons/encrypted_verified.png
+service.gui.buttons.ENCR=resources/images/impl/gui/buttons/encrypted.png
+service.gui.buttons.ENCR_DISABLED=resources/images/impl/gui/buttons/encrypted_disabled.png
 service.gui.buttons.ENTER_FULL_SCREEN_BUTTON=resources/images/impl/gui/buttons/enterFullScreen.png
 service.gui.buttons.EXIT_FULL_SCREEN_BUTTON=resources/images/impl/gui/buttons/exitFullScreen.png
 service.gui.buttons.DIAL_BUTTON_BG=resources/images/impl/gui/buttons/dialButtonBg.png
