1. Fix tests 2. Issue#487 fix crash, due to lticivil on 64bit platform.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4801 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -10,6 +10,8 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing.table; \
  javax.swing.text; \
  javax.swing.text.html; \
+ javax.swing.plaf; \
+ javax.swing.plaf.basic; \
  javax.imageio;\
  org.w3c.dom; \
  org.xml.sax; \
@@ -80,6 +82,7 @@ felix.auto.start.4= \
  reference:file:sc-bundles/jfontchooserlib.jar \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
+ reference:file:sc-bundles/keybindings.jar \
  reference:file:sc-bundles/swing-common.jar \
  reference:file:sc-bundles/netaddr.jar
 
