--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -35,9 +35,10 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  javax.sound.sampled; \
  org.jdesktop.jdic.tray; \
  org.jdesktop.jdic.desktop; \
- com.apple.eio; \
  com.apple.cocoa.application; \
  com.apple.cocoa.foundation; \
+ com.apple.eawt; \
+ com.apple.eio; \
  quicktime; \
  quicktime.std.sg; \
  quicktime.qd; \
