Adding notification sounds for ZRTP.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4828 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/sounds/sounds.properties
+++ b/resources/sounds/sounds.properties
@@ -16,3 +16,6 @@ DIAL_DIEZ=resources/sounds/one_1.wav
 DIAL_STAR=resources/sounds/one_1.wav
 
 BUSY=resources/sounds/busy.wav
+
+ZRTP_SECURE=resources/sounds/zrtpSecure.wav
+ZRTP_SECURE=resources/sounds/zrtpAlert.wav
