--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -3,7 +3,7 @@
 # This file configures the OSCAR framework to run sip-communicator unit tests
 # and Service Implementation Compatibility Kits
 #
-org.osgi.framework.system.packages= org.osgi.framework; \
+org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  javax.swing; \
  javax.swing.event; \
  javax.swing.border; \
@@ -83,7 +83,6 @@ felix.auto.start.4= \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
  reference:file:sc-bundles/keybindings.jar \
- reference:file:sc-bundles/swing-common.jar \
  reference:file:sc-bundles/netaddr.jar
 
 felix.auto.start.5= \
@@ -129,6 +128,8 @@ felix.auto.start.100= \
 
 #Specify the directory where oscar should deploy its bundles
 org.osgi.framework.storage=sip-communicator.utest.bin
+
+org.osgi.framework.startlevel=100
 
 felix.startlevel.framework=100
 felix.startlevel.bundle=100
